# IPTV-playlist-manager

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  verify_cleanliness.py
iptv_manager/: cleaner.py  config_loader.py  playlist_manager.py  report_generator.py  url_resolver.py  utils.py  vt_scanner.py
